# concat

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: test.yml
lib/: CMakeLists.txt  concat.hpp
test/: CMakeLists.txt  concat.cpp
